--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
     ]
   },
   "dependencies": {
+    "@nivo/bar": "0.79.1",
+    "@nivo/core": "0.79.0",
+    "@radix-ui/react-icons": "1.1.0",
+    "@visx/xychart": "2.9.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "1.49.9",
+    "typescript-plugin-css-modules": "3.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "16.2.1",
